--- a/DC_Blog/style.css
+++ b/DC_Blog/style.css
@@ -1,8 +1,9 @@
-/* ~~~~~~~~~~~HEADER~~~~~~~~~~~~~~~~~ */
-/* Padding from the sides of the page */
-header {
+/* Set Page Element margins */
+header , main, footer{
     Margin: 0px 100px;
 }
+
+/* ~~~~~~~~~~~HEADER~~~~~~~~~~~~~~~~~ */
 /* Make all header items inline */
 header *{
     display: inline-block;
@@ -19,33 +20,79 @@ ul.links a{
     display: inline-block;
     color: grey;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 16px;
     text-decoration: none;
     font-size: 14px;
-    font-weight: bold;
 }
 
 /* Change the color of links on hover */
 .links a:hover {
   background-color: #ddd;
   color: black;
+  border-radius: 3px;
 }
 
 /* ~~~~~~~~~~~TITLE~~~~~~~~~~~~~~~~~~ */
+.titleBlock{
+    text-align: center;
+}
+
 .title {
     color: black;
-    text-align: center;
     font-size: 40px;
-    Margin: 50px 100px;
+    margin: 50px 0px;
 }
 
 .date {
     color: grey;
-    text-align: center;
     font-size: 14px;
-    Margin: 10px 100px;
+    font-family: Arial;
 }
 
 .follow {
-    
+    color: white;
+    background-color: rgb(46, 132, 218);
+    border: 1px solid rgb(41, 118, 196);
+    border-radius: 3px;
+    padding: 5px 20px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: Calibri;
 }
+
+.follow:hover {
+    background-color: #ddd;
+    border: 1px solid rgb(168, 168, 168);
+    color: black;
+  }
+
+  /* ~~~~~~~~~~~BODY~~~~~~~~~~~~~~~~~~ */
+.mainPage, .pageNav {
+    padding: 20px 60px;
+    font-family: Calibri;
+}
+
+.pageNav {
+    border-top: 2px solid grey;
+}
+
+ul.nav, ul.nav li{
+    list-style: none;
+    padding: 0px;
+    display: inline-block;
+}
+ul.nav a{
+    color: grey;
+    text-align: center;
+    padding: 5px 16px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+  border-radius: 3px;
+}
+
