--- a/DC_Blog/style.css
+++ b/DC_Blog/style.css
@@ -68,12 +68,15 @@ ul.links a{
   }
 
   /* ~~~~~~~~~~~BODY~~~~~~~~~~~~~~~~~~ */
-.mainPage, .pageNav {
-    padding: 20px 60px;
+.mainPage{
+    padding: 40px 60px;
     font-family: Calibri;
 }
 
+
+/* ~~~~~~~~~~~~~FOOTER~~~~~~~~~~~~~~~~~ */
 .pageNav {
+    margin: 0px 60px;
     border-top: 2px solid grey;
 }
 
@@ -96,3 +99,11 @@ ul.nav a{
   border-radius: 3px;
 }
 
+.copyright {
+    margin: 0px 60px;
+    color: grey;
+    text-align: center;
+    padding: 40px 20px 0px 20px;
+    text-decoration: none;
+    font-size: 14px;
+}
