--- a/DC_Blog/style.css
+++ b/DC_Blog/style.css
@@ -1,3 +1,16 @@
+/* Create Page Dimensions */
+html{
+    background-color: lightgrey;
+}
+
+body {
+    width: 1000px;
+    align-content: center;
+    margin: auto;
+    padding: 2px;
+    background-color: white;
+}
+
 /* Set Page Element margins */
 header , main, footer{
     Margin: 0px 100px;
